<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.SafeWord.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
                android:id="@+id/contactsContainer"
                android:layout_width="match_parent"
                android:layout_height="506dp"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/etContactName"
                    android:layout_width="217dp"
                    android:layout_height="75dp"
                    android:hint="@string/contact_name"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:layout_marginStart="16dp" />

            <EditText
                    android:id="@+id/etContactEmail"
                    android:layout_width="246dp"
                    android:layout_height="111dp"
                    android:layout_weight="1"
                    android:autofillHints="emailAddress"
                    android:hint="@string/contact_email"
                    android:inputType="textEmailAddress"
                    android:enabled="true" />

            <EditText
                    android:id="@+id/etContactNumber"
                    android:layout_width="244dp"
                    android:layout_height="99dp"
                    android:layout_weight="1"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:autofillHints="phone" />

            <Button
                    android:id="@+id/btnSaveContact"
                    android:layout_width="165dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:text="@string/save_back" />

            <Button
                    android:id="@+id/btnAddContact"
                    android:layout_width="170dp"
                    android:layout_height="80dp"
                    android:text="@string/add_contact" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
